Culled features based off XGB FS algorithm using FFC55555 as the min, until the algoithm found FFC55555 as the min

--- a/III Models/3 Model C4/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_54704\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -167,7 +167,13 @@
         "                    'LC55568',\n",
         "                    'TI40050',\n",
         "                    'TI55023',\n",
-        "                    'PI55004'\n",
+        "                    'PI55004',\n",
+        "                    'M_Value',\n",
+        "                    'FFC55553',\n",
+        "                    'DI55580',\n",
+        "                    'Al2O3',\n",
+        "                    'C4_pct_Hex',\n",
+        "                    'LC52572'\n",
         "\n",
         "        # 'Octanol', 'Hexanol',\n",
         "#        'Ethanol', 'Decanol',\n",
@@ -196,10 +202,9 @@
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
-              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55557', 'LC90366', 'LC90368',\n",
+              "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
+              "       'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55003', 'FC55552',\n",
+              "       'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368',\n",
               "       'TC55552'],\n",
               "      dtype='object')"
             ]
@@ -289,33 +294,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                        Feature Rotation             Feature  \\\n",
-            "0      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          425_pct_Al   \n",
-            "1      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...             LC90368   \n",
-            "2      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          C4_pct_Hex   \n",
-            "3      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...            FFC55553   \n",
-            "4      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...  HydWtr_pct_Ammonia   \n",
-            "...                                                  ...                 ...   \n",
-            "14515  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             DI55102   \n",
-            "14516  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...            FFC55555   \n",
-            "14517  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             FC55569   \n",
-            "14518  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...          C4_pct_Hex   \n",
-            "14519  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...               Al2O3   \n",
+            "                                       Feature Rotation             Feature  \\\n",
+            "0     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...          425_pct_Al   \n",
+            "1     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55569   \n",
+            "2     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             LC90368   \n",
+            "3     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55552   \n",
+            "4     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55003   \n",
+            "...                                                 ...                 ...   \n",
+            "7675  [TC55552, DI55152, FFC55555, FC55569, LC55557,...         HydWtr_Na2O   \n",
+            "7676  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             FC55003   \n",
+            "7677  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             DI55102   \n",
+            "7678  [TC55552, DI55152, FFC55555, FC55569, LC55557,...  HydWtr_pct_Ammonia   \n",
+            "7679  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             LC90368   \n",
             "\n",
-            "       Importance  \n",
-            "0           507.0  \n",
-            "1           340.0  \n",
-            "2           243.0  \n",
-            "3           250.0  \n",
-            "4           312.0  \n",
-            "...           ...  \n",
-            "14515       197.0  \n",
-            "14516       187.0  \n",
-            "14517       193.0  \n",
-            "14518       166.0  \n",
-            "14519       192.0  \n",
+            "      Importance  \n",
+            "0          605.0  \n",
+            "1          424.0  \n",
+            "2          345.0  \n",
+            "3          310.0  \n",
+            "4          313.0  \n",
+            "...          ...  \n",
+            "7675       281.0  \n",
+            "7676       260.0  \n",
+            "7677       293.0  \n",
+            "7678       293.0  \n",
+            "7679       264.0  \n",
             "\n",
-            "[14520 rows x 3 columns]\n"
+            "[7680 rows x 3 columns]\n"
           ]
         }
       ],
@@ -357,35 +362,29 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance               Description\n",
-            "0   HydWtr_pct_Ammonia          284.618182                       NaN\n",
-            "1              TC55552          276.412121  DC-551 ALKOX  FD PREHEAT\n",
-            "2          HydWtr_Na2O          266.648485                       NaN\n",
-            "3           C4_pct_H2O          256.862121                       NaN\n",
-            "4              FC55552          255.525758  ALK FD TO HYDR RX DC-551\n",
-            "5           C4_pct_Eth          253.631818                       NaN\n",
-            "6              LC90368          249.543939      FB-658 ALKOXIDE TANK\n",
-            "7              FC55003          246.583333  DA-551 O/H H2O TO DC-551\n",
-            "8              DI55152          245.648485    2ND STG SEPR TO FA-560\n",
-            "9           425_pct_Al          239.277273                       NaN\n",
-            "10             LC55557          238.777273       FA-554 SLURRY LEVEL\n",
-            "11             FC55576          236.889394  CONDENSATE TO DESUPERHTR\n",
-            "12             DI55102          235.024242          HYDROL RX OUTLET\n",
-            "13             FC55569          234.300000    30# STM TO C4 STRIPPER\n",
-            "14             LC90366          234.178788        FB-657 SAO STORAGE\n",
-            "15            FFC55555          225.686364  RECYC BUT/ALKOX FD RATIO\n",
-            "16             M_Value          223.860606                       NaN\n",
-            "17            FFC55553          214.578788  DC551 H2O/ALKOXIDE RATIO\n",
-            "18             DI55580          213.721212  DA-554 BTMS SLURRY TO EX\n",
-            "19               Al2O3          209.865152                       NaN\n",
-            "20          C4_pct_Hex          205.965152                       NaN\n",
-            "21             LC52572          203.401515  FB-554 SLURRY SURGE TANK\n"
+            "0              DI55152          382.568750    2ND STG SEPR TO FA-560\n",
+            "1           C4_pct_Eth          362.631250                       NaN\n",
+            "2   HydWtr_pct_Ammonia          359.031250                       NaN\n",
+            "3              TC55552          357.916667  DC-551 ALKOX  FD PREHEAT\n",
+            "4              LC90366          343.950000        FB-657 SAO STORAGE\n",
+            "5           C4_pct_H2O          343.779167                       NaN\n",
+            "6              DI55102          337.045833          HYDROL RX OUTLET\n",
+            "7          HydWtr_Na2O          333.954167                       NaN\n",
+            "8              FC55569          332.804167    30# STM TO C4 STRIPPER\n",
+            "9              FC55576          324.968750  CONDENSATE TO DESUPERHTR\n",
+            "10             FC55003          314.147917  DA-551 O/H H2O TO DC-551\n",
+            "11          425_pct_Al          313.645833                       NaN\n",
+            "12             LC90368          312.272917      FB-658 ALKOXIDE TANK\n",
+            "13             LC55557          303.864583       FA-554 SLURRY LEVEL\n",
+            "14             FC55552          298.527083  ALK FD TO HYDR RX DC-551\n",
+            "15            FFC55555          284.891667  RECYC BUT/ALKOX FD RATIO\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_54704\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -419,7 +418,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-20 23:50:22.650111\n"
+            "2024-03-21 00:03:18.811491\n"
           ]
         }
       ],
