Updated OLS and seems the file management was saved for the last push and is accompanied on this one

--- a/III Models/3 Model C4/4 Model Selection/1.0.2 XGB - Tune Trees.ipynb
+++ b/III Models/3 Model C4/4 Model Selection/1.0.2 XGB - Tune Trees.ipynb
@@ -97,7 +97,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# # List of columns to exclude to run XGboost feature selection\n",
+        "# # List of columns to exclude from the XGboost feature selection results\n",
         "exclude_columns = [\n",
         "                     'LC55553',\n",
         "                     'TC55555',\n",
