--- a/III Models/3 Model C10/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -54,28 +54,33 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol   DI55102   DI55152  \\\n",
+            "0            0.867508    0.670721     3.354160  1.03026  0.965043  0.924515   \n",
+            "1            0.864729    0.671059     3.306475  1.03026  0.965043  0.924515   \n",
+            "2            0.856391    0.672071     3.163420  1.06326  0.965043  0.924515   \n",
+            "3            0.811652    0.674174     2.238130  1.51850  0.971625  0.933431   \n",
+            "4            0.773793    0.675408     1.391475  1.51850  0.971625  0.933431   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "    DI55580   FC55003    FC55009   FC55552   FC55569  FC55576  FFC55553  \\\n",
+            "0  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
+            "1  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
+            "2  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
+            "3  1.015146  5297.320   966.1866  40866.28  6918.194  329.701  1.050092   \n",
+            "4  1.015146  5297.320   966.1866  40866.28  6918.194  329.701  1.050092   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "   FFC55555   LC52572   LC55553   LC55557   LC55568    LC90366   LC90368  \\\n",
+            "0  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
+            "1  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
+            "2  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
+            "3  0.764579  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306   \n",
+            "4  0.764579  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306   \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "    PI55004   PI55020   TC55552   TC55555   TI40050   TI55021  \n",
+            "0  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
+            "1  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
+            "2  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
+            "3  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  \n",
+            "4  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  \n"
           ]
         }
       ],
@@ -95,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "trusted": true
       },
@@ -107,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -147,22 +152,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
-              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568',\n",
-              "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553',\n",
-              "       'TC55555', 'TI40050', 'TI55021', 'TI55023'],\n",
+              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Decanol', 'DI55102',\n",
+              "       'DI55152', 'DI55580', 'FC55003', 'FC55009', 'FC55552', 'FC55569',\n",
+              "       'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557',\n",
+              "       'LC55568', 'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552',\n",
+              "       'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -173,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -185,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -223,7 +228,7 @@
         "    return results\n",
         "\n",
         "\n",
-        "results = iterate_feature_rotations(df_All, 'Butanol')\n",
+        "results = iterate_feature_rotations(df_All, 'Decanol')\n",
         "\n",
         "# Convert results to a DataFrame\n",
         "flattened_results = []\n",
@@ -240,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -248,32 +253,32 @@
           "output_type": "stream",
           "text": [
             "                                        Feature Rotation     Feature  \\\n",
-            "0      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...  425_pct_Al   \n",
-            "1      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     LC55568   \n",
-            "2      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...    FFC55553   \n",
-            "3      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     FC55003   \n",
-            "4      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     TC55555   \n",
+            "0      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...  425_pct_Al   \n",
+            "1      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     LC55553   \n",
+            "2      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     FC55576   \n",
+            "3      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     FC55003   \n",
+            "4      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     LC90368   \n",
             "...                                                  ...         ...   \n",
-            "28825  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     LC90366   \n",
-            "28826  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     FC55576   \n",
-            "28827  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     TC55552   \n",
-            "28828  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     FC55552   \n",
-            "28829  [TI55023, TI40050, DI55102, DI55152, TC55553, ...  425_pct_Al   \n",
+            "26995  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     LC90368   \n",
+            "26996  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     DI55580   \n",
+            "26997  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...  C4_pct_Hex   \n",
+            "26998  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     LC55568   \n",
+            "26999  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     TC55552   \n",
             "\n",
             "       Importance  \n",
-            "0           493.0  \n",
-            "1           222.0  \n",
-            "2           237.0  \n",
-            "3           218.0  \n",
-            "4           170.0  \n",
+            "0           416.0  \n",
+            "1           178.0  \n",
+            "2           226.0  \n",
+            "3           211.0  \n",
+            "4           200.0  \n",
             "...           ...  \n",
-            "28825       153.0  \n",
-            "28826       155.0  \n",
-            "28827       172.0  \n",
-            "28828       158.0  \n",
-            "28829       154.0  \n",
+            "26995       160.0  \n",
+            "26996       141.0  \n",
+            "26997       157.0  \n",
+            "26998       105.0  \n",
+            "26999       183.0  \n",
             "\n",
-            "[28830 rows x 3 columns]\n"
+            "[27000 rows x 3 columns]\n"
           ]
         }
       ],
@@ -283,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -307,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -315,44 +320,43 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance                Description\n",
-            "0   HydWtr_pct_Ammonia          227.722581                        NaN\n",
-            "1          HydWtr_Na2O          212.411828                        NaN\n",
-            "2              TC55552          207.874194   DC-551 ALKOX  FD PREHEAT\n",
-            "3              FC55569          197.351613     30# STM TO C4 STRIPPER\n",
-            "4           C4_pct_H2O          196.354839                        NaN\n",
-            "5           425_pct_Al          192.492473                        NaN\n",
-            "6              FC55003          191.511828   DA-551 O/H H2O TO DC-551\n",
-            "7              LC90368          187.060215       FB-658 ALKOXIDE TANK\n",
-            "8           C4_pct_Hex          186.644086                        NaN\n",
-            "9              FC55552          185.907527   ALK FD TO HYDR RX DC-551\n",
-            "10          C4_pct_Eth          185.891398                        NaN\n",
-            "11            FFC55553          182.823656   DC551 H2O/ALKOXIDE RATIO\n",
-            "12             LC55557          182.505376        FA-554 SLURRY LEVEL\n",
-            "13             FC55576          181.621505   CONDENSATE TO DESUPERHTR\n",
-            "14             DI55102          181.230108           HYDROL RX OUTLET\n",
-            "15             M_Value          180.132258                        NaN\n",
-            "16             LC90366          172.938710         FB-657 SAO STORAGE\n",
-            "17             LC52572          171.348387   FB-554 SLURRY SURGE TANK\n",
-            "18             DI55152          170.191398     2ND STG SEPR TO FA-560\n",
-            "19             DI55580          160.326882   DA-554 BTMS SLURRY TO EX\n",
-            "20               Al2O3          157.970968                        NaN\n",
-            "21            FFC55555          154.272043   RECYC BUT/ALKOX FD RATIO\n",
-            "22             TC55555          152.260215        EA-552 OUT  RECY C4\n",
-            "23             PI55020          151.460215        DA-554 TOP PRESSURE\n",
-            "24             TC55553          148.665591    DC-551 HYDR H2O PREHEAT\n",
-            "25             TI55021          147.448387             STEAM TO DA554\n",
-            "26             LC55553          147.170968   DC551 HYDR RX SLURRY LEV\n",
-            "27             LC55568          146.126882    DA-554 C4 STRPR BOTTOMS\n",
-            "28             TI40050          141.439785  CLARK AIR COMP INLET TEMP\n",
-            "29             TI55023          108.291398                        NaN\n",
-            "30             PI55004          100.552688     DA-554 BOTTOM PRESSURE\n"
+            "0          HydWtr_Na2O          235.287778                        NaN\n",
+            "1              FC55009          219.400000    STM TO PA-551  RING HTR\n",
+            "2   HydWtr_pct_Ammonia          214.872222                        NaN\n",
+            "3              DI55152          214.847778     2ND STG SEPR TO FA-560\n",
+            "4              TC55552          213.675556   DC-551 ALKOX  FD PREHEAT\n",
+            "5           C4_pct_H2O          202.543333                        NaN\n",
+            "6              M_Value          201.976667                        NaN\n",
+            "7              DI55102          199.338889           HYDROL RX OUTLET\n",
+            "8              FC55552          190.743333   ALK FD TO HYDR RX DC-551\n",
+            "9           425_pct_Al          189.736667                        NaN\n",
+            "10            FFC55553          187.785556   DC551 H2O/ALKOXIDE RATIO\n",
+            "11          C4_pct_Hex          187.164444                        NaN\n",
+            "12          C4_pct_Eth          181.865556                        NaN\n",
+            "13             PI55020          180.848889        DA-554 TOP PRESSURE\n",
+            "14             LC90366          180.133333         FB-657 SAO STORAGE\n",
+            "15             LC90368          179.692222       FB-658 ALKOXIDE TANK\n",
+            "16             FC55569          172.470000     30# STM TO C4 STRIPPER\n",
+            "17             TI55021          171.256667             STEAM TO DA554\n",
+            "18             FC55003          167.426667   DA-551 O/H H2O TO DC-551\n",
+            "19             LC52572          165.330000   FB-554 SLURRY SURGE TANK\n",
+            "20             DI55580          163.997778   DA-554 BTMS SLURRY TO EX\n",
+            "21             FC55576          161.040000   CONDENSATE TO DESUPERHTR\n",
+            "22             PI55004          156.968889     DA-554 BOTTOM PRESSURE\n",
+            "23            FFC55555          154.924444   RECYC BUT/ALKOX FD RATIO\n",
+            "24             TI40050          153.204444  CLARK AIR COMP INLET TEMP\n",
+            "25             TC55555          153.172222        EA-552 OUT  RECY C4\n",
+            "26             LC55568          129.593333    DA-554 C4 STRPR BOTTOMS\n",
+            "27             LC55557          127.490000        FA-554 SLURRY LEVEL\n",
+            "28               Al2O3          125.623333                        NaN\n",
+            "29             LC55553          117.590000   DC551 HYDR RX SLURRY LEV\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19100\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_53808\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -379,14 +383,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-19 19:58:48.507877\n"
+            "2024-03-21 03:35:44.918402\n"
           ]
         }
       ],
