Ran up to C10 drop 1 - Showed wfwcr of red line visual on predicited vs actual

--- a/III Models/3 Model C10/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
@@ -159,15 +159,12 @@
       "source": [
         "# # List of columns to exclude to run XGboost feature selection\n",
         "exclude_columns = [\n",
-        "                    'TC55555',\n",
-        "                    'PI55020',\n",
-        "                    'TC55553',\n",
-        "                    'TI55021',\n",
-        "                    'LC55553',\n",
-        "                    'LC55568',\n",
-        "                    'TI40050',\n",
-        "                    'TI55023',\n",
-        "                    'PI55004'\n",
+        "                'TI40050',\n",
+        "                'TC55555',\n",
+        "                'LC55568',\n",
+        "                'LC55557',\n",
+        "                'Al2O3',\n",
+        "                'LC55553',\n",
         "\n",
         "        # 'Octanol', 'Hexanol',\n",
         "#        'Ethanol', 'Decanol',\n",
@@ -265,7 +262,7 @@
         "    return results\n",
         "\n",
         "\n",
-        "results = iterate_feature_rotations(df_All, 'Butanol')\n",
+        "results = iterate_feature_rotations(df_All, 'Decanol')\n",
         "\n",
         "# Convert results to a DataFrame\n",
         "flattened_results = []\n",
