--- a/III Models/3 Model C10/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_54704\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_52976\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -69,28 +69,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol  ...   LC55557  \\\n",
+            "0            0.867508    0.670721     3.354160  1.03026  ...  66.31395   \n",
+            "1            0.864729    0.671059     3.306475  1.03026  ...  66.31395   \n",
+            "2            0.856391    0.672071     3.163420  1.06326  ...  66.31395   \n",
+            "3            0.811652    0.674174     2.238130  1.51850  ...  65.92560   \n",
+            "4            0.773793    0.675408     1.391475  1.51850  ...  65.92560   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "    LC55568    LC90366   LC90368   PI55004   PI55020   TC55552   TC55555  \\\n",
+            "0  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "1  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "2  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "3  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
+            "4  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -159,21 +159,18 @@
       "source": [
         "# # List of columns to exclude to run XGboost feature selection\n",
         "exclude_columns = [\n",
-        "                    'TC55555',\n",
-        "                    'PI55020',\n",
-        "                    'TC55553',\n",
-        "                    'TI55021',\n",
-        "                    'LC55553',\n",
-        "                    'LC55568',\n",
-        "                    'TI40050',\n",
-        "                    'TI55023',\n",
-        "                    'PI55004',\n",
-        "                    'M_Value',\n",
-        "                    'FFC55553',\n",
-        "                    'DI55580',\n",
-        "                    'Al2O3',\n",
-        "                    'C4_pct_Hex',\n",
-        "                    'LC52572'\n",
+        "                'TI40050',\n",
+        "                'TC55555',\n",
+        "                'LC55568',\n",
+        "                'LC55557',\n",
+        "                'Al2O3',\n",
+        "                'LC55553',\n",
+        "                'M_Value',\n",
+        "                'FFC55553',\n",
+        "                'DI55580',\n",
+        "                'Al2O3',\n",
+        "                'C4_pct_Hex',\n",
+        "                'LC52572',\n",
         "\n",
         "        # 'Octanol', 'Hexanol',\n",
         "#        'Ethanol', 'Decanol',\n",
@@ -203,9 +200,9 @@
           "data": {
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-              "       'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368',\n",
-              "       'TC55552'],\n",
+              "       'HydWtr_Na2O', 'Decanol', 'DI55102', 'DI55152', 'FC55003', 'FC55009',\n",
+              "       'FC55552', 'FC55569', 'FC55576', 'FFC55555', 'LC90366', 'LC90368',\n",
+              "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
@@ -232,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -270,7 +267,7 @@
         "    return results\n",
         "\n",
         "\n",
-        "results = iterate_feature_rotations(df_All, 'Butanol')\n",
+        "results = iterate_feature_rotations(df_All, 'Decanol')\n",
         "\n",
         "# Convert results to a DataFrame\n",
         "flattened_results = []\n",
@@ -287,40 +284,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                       Feature Rotation             Feature  \\\n",
-            "0     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...          425_pct_Al   \n",
-            "1     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55569   \n",
-            "2     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             LC90368   \n",
-            "3     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55552   \n",
-            "4     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55003   \n",
-            "...                                                 ...                 ...   \n",
-            "7675  [TC55552, DI55152, FFC55555, FC55569, LC55557,...         HydWtr_Na2O   \n",
-            "7676  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             FC55003   \n",
-            "7677  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             DI55102   \n",
-            "7678  [TC55552, DI55152, FFC55555, FC55569, LC55557,...  HydWtr_pct_Ammonia   \n",
-            "7679  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             LC90368   \n",
+            "                                        Feature Rotation     Feature  \\\n",
+            "0      [425_pct_Al, LC90368, LC90366, DI55102, FC5556...  425_pct_Al   \n",
+            "1      [425_pct_Al, LC90368, LC90366, DI55102, FC5556...     LC90368   \n",
+            "2      [425_pct_Al, LC90368, LC90366, DI55102, FC5556...     LC90366   \n",
+            "3      [425_pct_Al, LC90368, LC90366, DI55102, FC5556...     DI55102   \n",
+            "4      [425_pct_Al, LC90368, LC90366, DI55102, FC5556...     FC55569   \n",
+            "...                                                  ...         ...   \n",
+            "10825  [TI55021, FC55552, FC55003, LC90366, PI55020, ...     PI55004   \n",
+            "10826  [TI55021, FC55552, FC55003, LC90366, PI55020, ...  C4_pct_Eth   \n",
+            "10827  [TI55021, FC55552, FC55003, LC90366, PI55020, ...     DI55152   \n",
+            "10828  [TI55021, FC55552, FC55003, LC90366, PI55020, ...     DI55102   \n",
+            "10829  [TI55021, FC55552, FC55003, LC90366, PI55020, ...  425_pct_Al   \n",
             "\n",
-            "      Importance  \n",
-            "0          605.0  \n",
-            "1          424.0  \n",
-            "2          345.0  \n",
-            "3          310.0  \n",
-            "4          313.0  \n",
-            "...          ...  \n",
-            "7675       281.0  \n",
-            "7676       260.0  \n",
-            "7677       293.0  \n",
-            "7678       293.0  \n",
-            "7679       264.0  \n",
+            "       Importance  \n",
+            "0           493.0  \n",
+            "1           394.0  \n",
+            "2           349.0  \n",
+            "3           343.0  \n",
+            "4           273.0  \n",
+            "...           ...  \n",
+            "10825       211.0  \n",
+            "10826       304.0  \n",
+            "10827       258.0  \n",
+            "10828       285.0  \n",
+            "10829       235.0  \n",
             "\n",
-            "[7680 rows x 3 columns]\n"
+            "[10830 rows x 3 columns]\n"
           ]
         }
       ],
@@ -330,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -354,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -362,29 +359,32 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance               Description\n",
-            "0              DI55152          382.568750    2ND STG SEPR TO FA-560\n",
-            "1           C4_pct_Eth          362.631250                       NaN\n",
-            "2   HydWtr_pct_Ammonia          359.031250                       NaN\n",
-            "3              TC55552          357.916667  DC-551 ALKOX  FD PREHEAT\n",
-            "4              LC90366          343.950000        FB-657 SAO STORAGE\n",
-            "5           C4_pct_H2O          343.779167                       NaN\n",
-            "6              DI55102          337.045833          HYDROL RX OUTLET\n",
-            "7          HydWtr_Na2O          333.954167                       NaN\n",
-            "8              FC55569          332.804167    30# STM TO C4 STRIPPER\n",
-            "9              FC55576          324.968750  CONDENSATE TO DESUPERHTR\n",
-            "10             FC55003          314.147917  DA-551 O/H H2O TO DC-551\n",
-            "11          425_pct_Al          313.645833                       NaN\n",
-            "12             LC90368          312.272917      FB-658 ALKOXIDE TANK\n",
-            "13             LC55557          303.864583       FA-554 SLURRY LEVEL\n",
-            "14             FC55552          298.527083  ALK FD TO HYDR RX DC-551\n",
-            "15            FFC55555          284.891667  RECYC BUT/ALKOX FD RATIO\n"
+            "0           C4_pct_H2O          337.747368                       NaN\n",
+            "1          HydWtr_Na2O          334.901754                       NaN\n",
+            "2           C4_pct_Eth          333.024561                       NaN\n",
+            "3              LC90368          328.135088      FB-658 ALKOXIDE TANK\n",
+            "4              DI55102          317.489474          HYDROL RX OUTLET\n",
+            "5              TC55552          316.207018  DC-551 ALKOX  FD PREHEAT\n",
+            "6              FC55552          305.059649  ALK FD TO HYDR RX DC-551\n",
+            "7              LC90366          303.568421        FB-657 SAO STORAGE\n",
+            "8   HydWtr_pct_Ammonia          298.978947                       NaN\n",
+            "9              DI55152          294.936842    2ND STG SEPR TO FA-560\n",
+            "10             FC55009          286.077193   STM TO PA-551  RING HTR\n",
+            "11          425_pct_Al          283.631579                       NaN\n",
+            "12             PI55020          268.928070       DA-554 TOP PRESSURE\n",
+            "13             FC55569          257.256140    30# STM TO C4 STRIPPER\n",
+            "14             FC55003          256.545614  DA-551 O/H H2O TO DC-551\n",
+            "15             PI55004          255.282456    DA-554 BOTTOM PRESSURE\n",
+            "16             TI55021          253.849123            STEAM TO DA554\n",
+            "17            FFC55555          246.515789  RECYC BUT/ALKOX FD RATIO\n",
+            "18             FC55576          241.864912  CONDENSATE TO DESUPERHTR\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_54704\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_52976\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -411,14 +411,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 00:03:18.811491\n"
+            "2024-03-21 18:56:21.278696\n"
           ]
         }
       ],
