Prepared to Run Selected Features for both C4 and C10

--- a/III Models/3 Model C4/5 Preprocessing - Slecected Features/Updated Model/1.0.2 XGB - Tune Trees.ipynb
+++ b/III Models/3 Model C4/5 Preprocessing - Slecected Features/Updated Model/1.0.2 XGB - Tune Trees.ipynb
@@ -69,7 +69,7 @@
         "# # Concatenate (union) the dataframes\n",
         "# df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
         "\n",
-        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C4\\3 Feature Selection\\filtered-out_5-9_corr.csv')\n",
+        "df_All = pd.read_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C4\\5 Preprocessing - Slecected Features\\Merge Data\\merged_data.csv')\n",
         "\n",
         "print(df_All.head())\n"
       ]
@@ -92,32 +92,32 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# # List of columns to exclude from the XGboost feature selection results\n",
-        "exclude_columns = [\n",
-        "                     'LC55553',\n",
-        "                     'TC55555',\n",
-        "                     'PI55020',\n",
-        "                     'TC55553',\n",
-        "                     'TI55021',\n",
-        "                     'LC55553',\n",
-        "                     'LC55568',\n",
-        "                     'TI40050',\n",
-        "                     'TI55023',\n",
-        "                     'PI55004',\n",
-        "                     'M_Value',\n",
-        "                     'FFC55553',\n",
-        "                     'DI55580',\n",
-        "                     'Al2O3',\n",
-        "                     'C4_pct_Hex',\n",
-        "                     'LC52572'\n",
+        "# # # List of columns to exclude from the XGboost feature selection results\n",
+        "# exclude_columns = [\n",
+        "#                      'LC55553',\n",
+        "#                      'TC55555',\n",
+        "#                      'PI55020',\n",
+        "#                      'TC55553',\n",
+        "#                      'TI55021',\n",
+        "#                      'LC55553',\n",
+        "#                      'LC55568',\n",
+        "#                      'TI40050',\n",
+        "#                      'TI55023',\n",
+        "#                      'PI55004',\n",
+        "#                      'M_Value',\n",
+        "#                      'FFC55553',\n",
+        "#                      'DI55580',\n",
+        "#                      'Al2O3',\n",
+        "#                      'C4_pct_Hex',\n",
+        "#                      'LC52572'\n",
         "\n",
-        "#                  'Date',\n",
-        "#                  'C4_pct_Hex', 'HydWtr_Na2O',\n",
-        "#                  'TC55555'  \n",
-        "                   ]\n",
+        "# #                  'Date',\n",
+        "# #                  'C4_pct_Hex', 'HydWtr_Na2O',\n",
+        "# #                  'TC55555'  \n",
+        "#                    ]\n",
         "\n",
-        "# # Create a new DataFrame without the excluded columnsd\n",
-        "df_All = df_All.drop(columns=exclude_columns)"
+        "# # # Create a new DataFrame without the excluded columnsd\n",
+        "# df_All = df_All.drop(columns=exclude_columns)"
       ]
     },
     {
